--- a/privacy/2022-04-20.md
+++ b/privacy/2022-04-20.md
@@ -422,3 +422,242 @@ superregular random walk, whose joint distribution of steps is as regular as
 that of independent random variables, yet which deviates from the origin
 logarithmicaly slowly.
 
+### Title: ARLIF-IDS -- Attention augmented Real-Time Isolation Forest Intrusion Detection System
+* Paper ID: 2204.09737v1
+* Paper URL: [http://arxiv.org/abs/2204.09737v1](http://arxiv.org/abs/2204.09737v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Distributed Denial of Service (DDoS) attack is a malicious attempt to disrupt
+the normal traffic of a targeted server, service or network by overwhelming the
+target or its surrounding infrastructure with a flood of Internet traffic.
+Emerging technologies such as the Internet of Things and Software Defined
+Networking leverage lightweight strategies for the early detection of DDoS
+attacks. Previous literature demonstrates the utility of lower number of
+significant features for intrusion detection. Thus, it is essential to have a
+fast and effective security identification model based on low number of
+features.
+  In this work, a novel Attention-based Isolation Forest Intrusion Detection
+System is proposed. The model considerably reduces training time and memory
+consumption of the generated model. For performance assessment, the model is
+assessed over two benchmark datasets, the NSL-KDD dataset & the KDDCUP'99
+dataset. Experimental results demonstrate that the proposed attention augmented
+model achieves a significant reduction in execution time, by 91.78%, and an
+average detection F1-Score of 0.93 on the NSL-KDD and KDDCUP'99 dataset. The
+results of performance evaluation show that the proposed methodology has low
+complexity and requires less processing time and computational resources,
+outperforming other current IDS based on machine learning algorithms.
+
+### Title: Detecting Unintended Memorization in Language-Model-Fused ASR
+* Paper ID: 2204.09606v1
+* Paper URL: [http://arxiv.org/abs/2204.09606v1](http://arxiv.org/abs/2204.09606v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: End-to-end (E2E) models are often being accompanied by language models (LMs)
+via shallow fusion for boosting their overall quality as well as recognition of
+rare words. At the same time, several prior works show that LMs are susceptible
+to unintentionally memorizing rare or unique sequences in the training data. In
+this work, we design a framework for detecting memorization of random textual
+sequences (which we call canaries) in the LM training data when one has only
+black-box (query) access to LM-fused speech recognizer, as opposed to direct
+access to the LM. On a production-grade Conformer RNN-T E2E model fused with a
+Transformer LM, we show that detecting memorization of singly-occurring
+canaries from the LM training data of 300M examples is possible. Motivated to
+protect privacy, we also show that such memorization gets significantly reduced
+by per-example gradient-clipped LM training without compromising overall
+quality.
+
+### Title: A Comprehensive Study of Accelerating IPv6 Deployment
+* Paper ID: 2204.09539v1
+* Paper URL: [http://arxiv.org/abs/2204.09539v1](http://arxiv.org/abs/2204.09539v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Since the lack of IPv6 network development, China is currently accelerating
+IPv6 deployment. In this scenario, traffic and network structure show a huge
+shift. However, due to the long-term prosperity, we are ignorant of the
+problems behind such outbreak of traffic and performance improvement events in
+accelerating deployment. IPv6 development in some regions will still face
+similar challenges in the future. To contribute to solving this problem, in
+this paper, we produce a new measurement framework and implement a 5-month
+passive measurement on the IPv6 network during the accelerating deployment in
+China. We combine 6 global-scale datasets to form the normal status of IPv6
+network, which is against to the accelerating status formed by the passive
+traffic. Moreover, we compare with the traffic during World IPv6 Day 2011 and
+Launch 2012 to discuss the common nature of accelerating deployment. Finally,
+the results indicate that the IPv6 accelerating deployment is often accompanied
+by an unbalanced network status. It exposes unresolved security issues
+including the challenge of user privacy and inappropriate access methods.
+According to the investigation, we point the future IPv6 development after
+accelerating deployment.
+
+### Title: SiamHAN: IPv6 Address Correlation Attacks on TLS Encrypted Traffic via Siamese Heterogeneous Graph Attention Network
+* Paper ID: 2204.09465v1
+* Paper URL: [http://arxiv.org/abs/2204.09465v1](http://arxiv.org/abs/2204.09465v1)
+* Updated Date: 2022-04-20
+* Code URL: [https://github.com/cuitianyu961030/siamhan](https://github.com/cuitianyu961030/siamhan)
+* Summary: Unlike IPv4 addresses, which are typically masked by a NAT, IPv6 addresses
+could easily be correlated with user activity, endangering their privacy.
+Mitigations to address this privacy concern have been deployed, making existing
+approaches for address-to-user correlation unreliable. This work demonstrates
+that an adversary could still correlate IPv6 addresses with users accurately,
+even with these protection mechanisms. To do this, we propose an IPv6 address
+correlation model - SiamHAN. The model uses a Siamese Heterogeneous Graph
+Attention Network to measure whether two IPv6 client addresses belong to the
+same user even if the user's traffic is protected by TLS encryption. Using a
+large real-world dataset, we show that, for the tasks of tracking target users
+and discovering unique users, the state-of-the-art techniques could achieve
+only 85% and 60% accuracy, respectively. However, SiamHAN exhibits 99% and 88%
+accuracy.
+
+### Title: Multi-Component Optimization and Efficient Deployment of Neural-Networks on Resource-Constrained IoT Hardware
+* Paper ID: 2204.10183v1
+* Paper URL: [http://arxiv.org/abs/2204.10183v1](http://arxiv.org/abs/2204.10183v1)
+* Updated Date: 2022-04-20
+* Code URL: [https://github.com/bharathsudharsan/cnn_on_mcu](https://github.com/bharathsudharsan/cnn_on_mcu)
+* Summary: The majority of IoT devices like smartwatches, smart plugs, HVAC controllers,
+etc., are powered by hardware with a constrained specification (low memory,
+clock speed and processor) which is insufficient to accommodate and execute
+large, high-quality models. On such resource-constrained devices, manufacturers
+still manage to provide attractive functionalities (to boost sales) by
+following the traditional approach of programming IoT devices/products to
+collect and transmit data (image, audio, sensor readings, etc.) to their
+cloud-based ML analytics platforms. For decades, this online approach has been
+facing issues such as compromised data streams, non-real-time analytics due to
+latency, bandwidth constraints, costly subscriptions, recent privacy issues
+raised by users and the GDPR guidelines, etc. In this paper, to enable
+ultra-fast and accurate AI-based offline analytics on resource-constrained IoT
+devices, we present an end-to-end multi-component model optimization sequence
+and open-source its implementation. Researchers and developers can use our
+optimization sequence to optimize high memory, computation demanding models in
+multiple aspects in order to produce small size, low latency, low-power
+consuming models that can comfortably fit and execute on resource-constrained
+hardware. The experimental results show that our optimization components can
+produce models that are; (i) 12.06 x times compressed; (ii) 0.13% to 0.27% more
+accurate; (iii) Orders of magnitude faster unit inference at 0.06 ms. Our
+optimization sequence is generic and can be applied to any state-of-the-art
+models trained for anomaly detection, predictive maintenance, robotics, voice
+recognition, and machine vision.
+
+### Title: You Are What You Write: Preserving Privacy in the Era of Large Language Models
+* Paper ID: 2204.09391v1
+* Paper URL: [http://arxiv.org/abs/2204.09391v1](http://arxiv.org/abs/2204.09391v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Large scale adoption of large language models has introduced a new era of
+convenient knowledge transfer for a slew of natural language processing tasks.
+However, these models also run the risk of undermining user trust by exposing
+unwanted information about the data subjects, which may be extracted by a
+malicious party, e.g. through adversarial attacks. We present an empirical
+investigation into the extent of the personal information encoded into
+pre-trained representations by a range of popular models, and we show a
+positive correlation between the complexity of a model, the amount of data used
+in pre-training, and data leakage. In this paper, we present the first wide
+coverage evaluation and comparison of some of the most popular
+privacy-preserving algorithms, on a large, multi-lingual dataset on sentiment
+analysis annotated with demographic information (location, age and gender). The
+results show since larger and more complex models are more prone to leaking
+private information, use of privacy-preserving methods is highly desirable. We
+also find that highly privacy-preserving technologies like differential privacy
+(DP) can have serious model utility effects, which can be ameliorated using
+hybrid or metric-DP techniques.
+
+### Title: Federated Learning in Multi-Center Critical Care Research: A Systematic Case Study using the eICU Database
+* Paper ID: 2204.09328v1
+* Paper URL: [http://arxiv.org/abs/2204.09328v1](http://arxiv.org/abs/2204.09328v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Federated learning (FL) has been proposed as a method to train a model on
+different units without exchanging data. This offers great opportunities in the
+healthcare sector, where large datasets are available but cannot be shared to
+ensure patient privacy. We systematically investigate the effectiveness of FL
+on the publicly available eICU dataset for predicting the survival of each ICU
+stay. We employ Federated Averaging as the main practical algorithm for FL and
+show how its performance changes by altering three key hyper-parameters, taking
+into account that clients can significantly vary in size. We find that in many
+settings, a large number of local training epochs improves the performance
+while at the same time reducing communication costs. Furthermore, we outline in
+which settings it is possible to have only a low number of hospitals
+participating in each federated update round. When many hospitals with low
+patient counts are involved, the effect of overfitting can be avoided by
+decreasing the batchsize. This study thus contributes toward identifying
+suitable settings for running distributed algorithms such as FL on clinical
+datasets.
+
+### Title: Massive Twinning to Enhance Emergent Intelligence
+* Paper ID: 2204.09316v1
+* Paper URL: [http://arxiv.org/abs/2204.09316v1](http://arxiv.org/abs/2204.09316v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Future Industrial Internet-of-Things in the upcoming 6G era is expected to
+deploy artificial intelligence (AI) and digital twins (DTs) ubiquitously. As a
+complement to conventional AI solutions, emergent intelligence (EI) exhibits
+various outstanding features including robustness, protection to privacy, and
+scalability, which makes it competitive for 6G IIoT applications. However,
+despite its low computational complexity, it is challenged by its high demand
+of data traffic in massive deployment. In this paper, we propose to exploit the
+massive twinning paradigm, which 6G is envisaged to support, to reduce the data
+traffic in EI and therewith enhance its performance.
+
+### Title: Exploring Widevine for Fun and Profit
+* Paper ID: 2204.09298v1
+* Paper URL: [http://arxiv.org/abs/2204.09298v1](http://arxiv.org/abs/2204.09298v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: For years, Digital Right Management (DRM) systems have been used as the go-to
+solution for media content protection against piracy. With the growing
+consumption of content using Over-the-Top platforms, such as Netflix or Prime
+Video, DRMs have been deployed on numerous devices considered as potential
+hostile environments. In this paper, we focus on the most widespread solution,
+the closed-source Widevine DRM. Installed on billions of devices, Widevine
+relies on cryptographic operations to protect content. Our work presents a
+study of Widevine internals on Android, mapping its distinct components and
+bringing out its different cryptographic keys involved in content decryption.
+We provide a structural view of Widevine as a protocol with its complete key
+ladder. Based on our insights, we develop WideXtractor, a tool based on Frida
+to trace Widevine function calls and intercept messages for inspection. Using
+this tool, we analyze Netflix usage of Widevine as a proof-of-concept, and
+raised privacy concerns on user-tracking. In addition, we leverage our
+knowledge to bypass the obfuscation of Android Widevine software-only version,
+namely L3, and recover its Root-of-Trust.
+
+### Title: The Danger of Small Anonymity Sets in Privacy-Preserving Payment Systems
+* Paper ID: 2204.09282v1
+* Paper URL: [http://arxiv.org/abs/2204.09282v1](http://arxiv.org/abs/2204.09282v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Unlike suggested during their early years of existence, Bitcoin and similar
+cryptocurrencies in fact offer significantly less privacy as compared to
+traditional banking. A myriad of privacy-enhancing extensions to those
+cryptocurrencies as well as several clean-slate privacy-protecting
+cryptocurrencies have been proposed in turn. To convey a better understanding
+of the protection of popular design decisions, we investigate expected
+anonymity set sizes in an initial simulation study. The large variation of
+expected transaction values yields soberingly small effective anonymity sets
+for protocols that leak transaction values. We hence examine the effect of
+preliminary, intuitive strategies for merging groups of payments into larger
+anonymity sets, for instance by choosing from pre-specified value classes. The
+results hold promise, as they indeed induce larger anonymity sets at
+comparatively low cost, depending on the corresponding strategy
+
+### Title: Private measures, random walks, and synthetic data
+* Paper ID: 2204.09167v1
+* Paper URL: [http://arxiv.org/abs/2204.09167v1](http://arxiv.org/abs/2204.09167v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Differential privacy is a mathematical concept that provides an
+information-theoretic security guarantee. While differential privacy has
+emerged as a de facto standard for guaranteeing privacy in data sharing, the
+known mechanisms to achieve it come with some serious limitations. Utility
+guarantees are usually provided only for a fixed, a priori specified set of
+queries. Moreover, there are no utility guarantees for more complex - but very
+common - machine learning tasks such as clustering or classification. In this
+paper we overcome some of these limitations. Working with metric privacy, a
+powerful generalization of differential privacy, we develop a polynomial-time
+algorithm that creates a private measure from a data set. This private measure
+allows us to efficiently construct private synthetic data that are accurate for
+a wide range of statistical analysis tools. Moreover, we prove an
+asymptotically sharp min-max result for private measures and synthetic data for
+general compact metric spaces. A key ingredient in our construction is a new
+superregular random walk, whose joint distribution of steps is as regular as
+that of independent random variables, yet which deviates from the origin
+logarithmicaly slowly.
+
