--- a/protect/2022-04-20.md
+++ b/protect/2022-04-20.md
@@ -395,3 +395,210 @@ anonymity sets, for instance by choosing from pre-specified value classes. The
 results hold promise, as they indeed induce larger anonymity sets at
 comparatively low cost, depending on the corresponding strategy
 
+### Title: Quantum Analog of Vibration Isolation: From Room Temperature Superfluorescence to High Temperature Superconductivity
+* Paper ID: 2204.09807v1
+* Paper URL: [http://arxiv.org/abs/2204.09807v1](http://arxiv.org/abs/2204.09807v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: The development and the use of quantum technologies are hindered by a
+fundamental challenge: Quantum materials exhibit macroscopic quantum properties
+at extremely low temperatures due to the loss of quantum coherence at elevated
+temperatures. Here, based on our recent discovery of room temperature
+superfluorescence in perovskites, we present the Quantum Analog of Vibration
+Isolation, 'QAVI', model and explain how it protects the quantum phase against
+dephasing at high temperatures. We then postulate the requirements for
+observation of macroscopic quantum phenomena at practical temperatures and
+propose a unified model for all macroscopic quantum phase transitions. We
+further present the general features of the temperature and density phase
+diagram of macroscopic quantum phase transitions that are mediated by the QAVI
+process and identify the similarities observed in the phase diagram of high Tc
+superconductors. Understanding this fundamental quantum coherence protection
+mechanism is imperative to accelerate the discovery of high temperature
+macroscopic quantum phenomena, and offers significant potential for developing
+quantum technologies functioning under practical conditions.
+
+### Title: GUARD: Graph Universal Adversarial Defense
+* Paper ID: 2204.09803v1
+* Paper URL: [http://arxiv.org/abs/2204.09803v1](http://arxiv.org/abs/2204.09803v1)
+* Updated Date: 2022-04-20
+* Code URL: [https://github.com/edisonleeeee/guard](https://github.com/edisonleeeee/guard)
+* Summary: Recently, graph convolutional networks (GCNs) have shown to be vulnerable to
+small adversarial perturbations, which becomes a severe threat and largely
+limits their applications in security-critical scenarios. To mitigate such a
+threat, considerable research efforts have been devoted to increasing the
+robustness of GCNs against adversarial attacks. However, current approaches for
+defense are typically designed for the whole graph and consider the global
+performance, posing challenges in protecting important local nodes from
+stronger adversarial targeted attacks. In this work, we present a simple yet
+effective method, named \textbf{\underline{G}}raph
+\textbf{\underline{U}}niversal
+\textbf{\underline{A}}dve\textbf{\underline{R}}sarial
+\textbf{\underline{D}}efense (GUARD). Unlike previous works, GUARD protects
+each individual node from attacks with a universal defensive patch, which is
+generated once and can be applied to any node (node-agnostic) in a graph.
+Extensive experiments on four benchmark datasets demonstrate that our method
+significantly improves robustness for several established GCNs against multiple
+adversarial attacks and outperforms existing adversarial defense methods by
+large margins. Our code is publicly available at
+https://github.com/EdisonLeeeee/GUARD.
+
+### Title: BliMe: Verifiably Secure Outsourced Computation with Hardware-Enforced Taint Tracking
+* Paper ID: 2204.09649v1
+* Paper URL: [http://arxiv.org/abs/2204.09649v1](http://arxiv.org/abs/2204.09649v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: We present Blinded Memory (BliMe), a way to realize efficient and secure
+outsourced computation. BliMe consists of a novel and minimal set of ISA
+extensions that uses taint tracking to ensure the confidentiality of sensitive
+(client) data even in the presence of server malware, run-time attacks, and
+side-channel attacks. To secure outsourced computation, the BliMe extensions
+can be used together with an attestable, fixed-function trusted execution
+environment (TEE) and an encryption engine that provides atomic
+decrypt-and-taint and encrypt-and-untaint operations. The TEE engages in an
+attestation and key agreement protocol with the client. It provides the
+resulting client-specific keys to the encryption engine. Clients rely on remote
+attestation to ensure that their data will always be protected by BliMe's taint
+tracking policy after decryption. We provide a machine-checked security proof
+and an FPGA implementation (BliMe-Ibex) of BliMe's taint tracking policy. We
+show that BliMe-Ibex does not reduce performance relative to the unmodified
+core, and incurs only minor increases in resource consumption in terms of power
+($<2\%$), LUTs ($<1\%$), and registers ($<3\%$).
+
+### Title: Novel wide spectrum light absorber heterostructures based on hBN/In(Ga)Te
+* Paper ID: 2204.09048v1
+* Paper URL: [http://arxiv.org/abs/2204.09048v1](http://arxiv.org/abs/2204.09048v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Two-dimensional group III monochalcogenides have recently attracted quite
+attention for their wide spectrum of optical and electric properties, being
+promising candidates for optoelectronic and novel electrical applications,
+however in their pristine form they are very sensitive and vulnerable to oxygen
+in air. Here we present two newly designed vdW heterostructures based on hBN
+(hexagonal boron nitride) and GaTe or InTe monolayer. Using density functional
+theory we investigate electronic and optical properties of those structures.
+Their moderate band gap and an good absorption coefficient makes them excellent
+for absorbers in wide spectrum, covering all from part of IR to far UV
+spectrum, with particularly good absorption of UV light. The hBN layer which
+can be beneficial for protection of sensitive GaTe and InTe does not only
+preserve their optical properties but also enhances it. Moreover, we confirm
+that type of stacking does not affect any relevant properties, as all three
+stacking types are very similar in total energy and bandstructure is almost the
+same for every one. This is especially important for easier experimental
+realization.
+
+### Title: Detecting Unintended Memorization in Language-Model-Fused ASR
+* Paper ID: 2204.09606v1
+* Paper URL: [http://arxiv.org/abs/2204.09606v1](http://arxiv.org/abs/2204.09606v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: End-to-end (E2E) models are often being accompanied by language models (LMs)
+via shallow fusion for boosting their overall quality as well as recognition of
+rare words. At the same time, several prior works show that LMs are susceptible
+to unintentionally memorizing rare or unique sequences in the training data. In
+this work, we design a framework for detecting memorization of random textual
+sequences (which we call canaries) in the LM training data when one has only
+black-box (query) access to LM-fused speech recognizer, as opposed to direct
+access to the LM. On a production-grade Conformer RNN-T E2E model fused with a
+Transformer LM, we show that detecting memorization of singly-occurring
+canaries from the LM training data of 300M examples is possible. Motivated to
+protect privacy, we also show that such memorization gets significantly reduced
+by per-example gradient-clipped LM training without compromising overall
+quality.
+
+### Title: Electrical two-qubit gates within a pair of clock-qubit magnetic molecules
+* Paper ID: 2204.09592v1
+* Paper URL: [http://arxiv.org/abs/2204.09592v1](http://arxiv.org/abs/2204.09592v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Enhanced coherence in HoW$_{10}$ molecular spin qubits has been demonstrated
+by use of Clock Transitions (CTs). More recently it was shown that, while
+operating at the CTs, it was possible to use an electrical field to selectively
+address HoW$_{10}$ molecules pointing in a given direction, within a crystal
+that contains two kinds of identical but inversion-related molecules. Herein we
+theoretically explore the possibility of employing the electric field to effect
+entangling two-qubit quantum gates among two neighbouring CT-protected
+HoW$_{10}$ qubits within a diluted crystal. We estimate the thermal evolution
+of $T_1$, $T_2$ and we find that CTs are also optimal operating points from the
+point of view of phonons, and that even a moderate cooling from $T=5$K to
+$T=3$K would significantly increase coherence times. Provided challenging
+initialization requirements are met, it will be possible to combine a sequence
+of microwave and electric field pulses to achieve coherent control within a
+2-qubit operating space that is protected both from spin-bath and from
+phonon-bath decoherence. Finally, we found a highly protected 1-qubit subspace
+resulting from the interaction between two clock molecules.
+
+### Title: SiamHAN: IPv6 Address Correlation Attacks on TLS Encrypted Traffic via Siamese Heterogeneous Graph Attention Network
+* Paper ID: 2204.09465v1
+* Paper URL: [http://arxiv.org/abs/2204.09465v1](http://arxiv.org/abs/2204.09465v1)
+* Updated Date: 2022-04-20
+* Code URL: [https://github.com/cuitianyu961030/siamhan](https://github.com/cuitianyu961030/siamhan)
+* Summary: Unlike IPv4 addresses, which are typically masked by a NAT, IPv6 addresses
+could easily be correlated with user activity, endangering their privacy.
+Mitigations to address this privacy concern have been deployed, making existing
+approaches for address-to-user correlation unreliable. This work demonstrates
+that an adversary could still correlate IPv6 addresses with users accurately,
+even with these protection mechanisms. To do this, we propose an IPv6 address
+correlation model - SiamHAN. The model uses a Siamese Heterogeneous Graph
+Attention Network to measure whether two IPv6 client addresses belong to the
+same user even if the user's traffic is protected by TLS encryption. Using a
+large real-world dataset, we show that, for the tasks of tracking target users
+and discovering unique users, the state-of-the-art techniques could achieve
+only 85% and 60% accuracy, respectively. However, SiamHAN exhibits 99% and 88%
+accuracy.
+
+### Title: Massive Twinning to Enhance Emergent Intelligence
+* Paper ID: 2204.09316v1
+* Paper URL: [http://arxiv.org/abs/2204.09316v1](http://arxiv.org/abs/2204.09316v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Future Industrial Internet-of-Things in the upcoming 6G era is expected to
+deploy artificial intelligence (AI) and digital twins (DTs) ubiquitously. As a
+complement to conventional AI solutions, emergent intelligence (EI) exhibits
+various outstanding features including robustness, protection to privacy, and
+scalability, which makes it competitive for 6G IIoT applications. However,
+despite its low computational complexity, it is challenged by its high demand
+of data traffic in massive deployment. In this paper, we propose to exploit the
+massive twinning paradigm, which 6G is envisaged to support, to reduce the data
+traffic in EI and therewith enhance its performance.
+
+### Title: Exploring Widevine for Fun and Profit
+* Paper ID: 2204.09298v1
+* Paper URL: [http://arxiv.org/abs/2204.09298v1](http://arxiv.org/abs/2204.09298v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: For years, Digital Right Management (DRM) systems have been used as the go-to
+solution for media content protection against piracy. With the growing
+consumption of content using Over-the-Top platforms, such as Netflix or Prime
+Video, DRMs have been deployed on numerous devices considered as potential
+hostile environments. In this paper, we focus on the most widespread solution,
+the closed-source Widevine DRM. Installed on billions of devices, Widevine
+relies on cryptographic operations to protect content. Our work presents a
+study of Widevine internals on Android, mapping its distinct components and
+bringing out its different cryptographic keys involved in content decryption.
+We provide a structural view of Widevine as a protocol with its complete key
+ladder. Based on our insights, we develop WideXtractor, a tool based on Frida
+to trace Widevine function calls and intercept messages for inspection. Using
+this tool, we analyze Netflix usage of Widevine as a proof-of-concept, and
+raised privacy concerns on user-tracking. In addition, we leverage our
+knowledge to bypass the obfuscation of Android Widevine software-only version,
+namely L3, and recover its Root-of-Trust.
+
+### Title: The Danger of Small Anonymity Sets in Privacy-Preserving Payment Systems
+* Paper ID: 2204.09282v1
+* Paper URL: [http://arxiv.org/abs/2204.09282v1](http://arxiv.org/abs/2204.09282v1)
+* Updated Date: 2022-04-20
+* Code URL: null
+* Summary: Unlike suggested during their early years of existence, Bitcoin and similar
+cryptocurrencies in fact offer significantly less privacy as compared to
+traditional banking. A myriad of privacy-enhancing extensions to those
+cryptocurrencies as well as several clean-slate privacy-protecting
+cryptocurrencies have been proposed in turn. To convey a better understanding
+of the protection of popular design decisions, we investigate expected
+anonymity set sizes in an initial simulation study. The large variation of
+expected transaction values yields soberingly small effective anonymity sets
+for protocols that leak transaction values. We hence examine the effect of
+preliminary, intuitive strategies for merging groups of payments into larger
+anonymity sets, for instance by choosing from pre-specified value classes. The
+results hold promise, as they indeed induce larger anonymity sets at
+comparatively low cost, depending on the corresponding strategy
+
