--- a/federate/2022-04-21.md
+++ b/federate/2022-04-21.md
@@ -47,3 +47,52 @@ preserving privacy. Our results prove the efficiency of the Block Hunter in
 detecting anomalous activities with high accuracy and minimum required
 bandwidth.
 
+### Title: FedCL: Federated Contrastive Learning for Privacy-Preserving Recommendation
+* Paper ID: 2204.09850v1
+* Paper URL: [http://arxiv.org/abs/2204.09850v1](http://arxiv.org/abs/2204.09850v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Contrastive learning is widely used for recommendation model learning, where
+selecting representative and informative negative samples is critical. Existing
+methods usually focus on centralized data, where abundant and high-quality
+negative samples are easy to obtain. However, centralized user data storage and
+exploitation may lead to privacy risks and concerns, while decentralized user
+data on a single client can be too sparse and biased for accurate contrastive
+learning. In this paper, we propose a federated contrastive learning method
+named FedCL for privacy-preserving recommendation, which can exploit
+high-quality negative samples for effective model training with privacy well
+protected. We first infer user embeddings from local user data through the
+local model on each client, and then perturb them with local differential
+privacy (LDP) before sending them to a central server for hard negative
+sampling. Since individual user embedding contains heavy noise due to LDP, we
+propose to cluster user embeddings on the server to mitigate the influence of
+noise, and the cluster centroids are used to retrieve hard negative samples
+from the item pool. These hard negative samples are delivered to user clients
+and mixed with the observed negative samples from local data as well as
+in-batch negatives constructed from positive samples for federated model
+training. Extensive experiments on four benchmark datasets show FedCL can
+empower various recommendation methods in a privacy-preserving way.
+
+### Title: Block Hunter: Federated Learning for Cyber Threat Hunting in Blockchain-based IIoT Networks
+* Paper ID: 2204.09829v1
+* Paper URL: [http://arxiv.org/abs/2204.09829v1](http://arxiv.org/abs/2204.09829v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Nowadays, blockchain-based technologies are being developed in various
+industries to improve data security. In the context of the Industrial Internet
+of Things (IIoT), a chain-based network is one of the most notable applications
+of blockchain technology. IIoT devices have become increasingly prevalent in
+our digital world, especially in support of developing smart factories.
+Although blockchain is a powerful tool, it is vulnerable to cyber attacks.
+Detecting anomalies in blockchain-based IIoT networks in smart factories is
+crucial in protecting networks and systems from unexpected attacks. In this
+paper, we use Federated Learning (FL) to build a threat hunting framework
+called Block Hunter to automatically hunt for attacks in blockchain-based IIoT
+networks. Block Hunter utilizes a cluster-based architecture for anomaly
+detection combined with several machine learning models in a federated
+environment. To the best of our knowledge, Block Hunter is the first federated
+threat hunting model in IIoT networks that identifies anomalous behavior while
+preserving privacy. Our results prove the efficiency of the Block Hunter in
+detecting anomalous activities with high accuracy and minimum required
+bandwidth.
+
