--- a/security/2022-04-21.md
+++ b/security/2022-04-21.md
@@ -311,3 +311,297 @@ method that outperforms all the others on all datasets, it identifies those
 that stand out and revise misconceived knowledge about their relative
 performances.
 
+### Title: Addressing Tactic Volatility in Self-Adaptive Systems Using Evolved Recurrent Neural Networks and Uncertainty Reduction Tactics
+* Paper ID: 2204.10308v1
+* Paper URL: [http://arxiv.org/abs/2204.10308v1](http://arxiv.org/abs/2204.10308v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Self-adaptive systems frequently use tactics to perform adaptations. Tactic
+examples include the implementation of additional security measures when an
+intrusion is detected, or activating a cooling mechanism when temperature
+thresholds are surpassed. Tactic volatility occurs in real-world systems and is
+defined as variable behavior in the attributes of a tactic, such as its latency
+or cost. A system's inability to effectively account for tactic volatility
+adversely impacts its efficiency and resiliency against the dynamics of
+real-world environments. To enable systems' efficiency against tactic
+volatility, we propose a Tactic Volatility Aware (TVA-E) process utilizing
+evolved Recurrent Neural Networks (eRNN) to provide accurate tactic
+predictions. TVA-E is also the first known process to take advantage of
+uncertainty reduction tactics to provide additional information to the
+decision-making process and reduce uncertainty. TVA-E easily integrates into
+popular adaptation processes enabling it to immediately benefit a large number
+of existing self-adaptive systems. Simulations using 52,106 tactic records
+demonstrate that: I) eRNN is an effective prediction mechanism, II) TVA-E
+represents an improvement over existing state-of-the-art processes in
+accounting for tactic volatility, and III) Uncertainty reduction tactics are
+beneficial in accounting for tactic volatility. The developed dataset and tool
+can be found at https://tacticvolatility.github.io/
+
+### Title: LibDB: An Effective and Efficient Framework for Detecting Third-Party Libraries in Binaries
+* Paper ID: 2204.10232v1
+* Paper URL: [http://arxiv.org/abs/2204.10232v1](http://arxiv.org/abs/2204.10232v1)
+* Updated Date: 2022-04-21
+* Code URL: [https://github.com/deepsoftwareanalytics/libdb](https://github.com/deepsoftwareanalytics/libdb)
+* Summary: Third-party libraries (TPLs) are reused frequently in software applications
+for reducing development cost. However, they could introduce security risks as
+well. Many TPL detection methods have been proposed to detect TPL reuse in
+Android bytecode or in source code. This paper focuses on detecting TPL reuse
+in binary code, which is a more challenging task. For a detection target in
+binary form, libraries may be compiled and linked to separate dynamic-link
+files or built into a fused binary that contains multiple libraries and
+project-specific code. This could result in fewer available code features and
+lower the effectiveness of feature engineering. In this paper, we propose a
+binary TPL reuse detection framework, LibDB, which can effectively and
+efficiently detect imported TPLs even in stripped and fused binaries. In
+addition to the basic and coarse-grained features (string literals and exported
+function names), LibDB utilizes function contents as a new type of feature. It
+embeds all functions in a binary file to low-dimensional representations with a
+trained neural network. It further adopts a function call graph-based
+comparison method to improve the accuracy of the detection. LibDB is able to
+support version identification of TPLs contained in the detection target, which
+is not considered by existing detection methods. To evaluate the performance of
+LibDB, we construct three datasets for binary-based TPL reuse detection. Our
+experimental results show that LibDB is more accurate and efficient than
+state-of-the-art tools on the binary TPL detection task and the version
+identification task. Our datasets and source code used in this work are
+anonymously available at https://github.com/DeepSoftwareAnalytics/LibDB.
+
+### Title: A novel two-party semiquantum key distribution protocol based on GHZ-like states
+* Paper ID: 2204.10088v1
+* Paper URL: [http://arxiv.org/abs/2204.10088v1](http://arxiv.org/abs/2204.10088v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: In this paper, we propose a novel two-party semiquantum key distribution
+(SQKD) protocol by only employing one kind of GHZ-like state. The proposed SQKD
+protocol can create a private key shared between one quantum party with
+unlimited quantum abilities and one classical party with limited quantum
+abilities without the existence of a third party. The proposed SQKD protocol
+doesn't need the Hadamard gate or quantum entanglement swapping. Detailed
+security analysis turns out that the proposed SQKD protocol can resist various
+famous attacks from an outside eavesdropper, such as the Trojan horse attacks,
+the entangle-measure attack, the double CNOT attacks, the measure-resend attack
+and the intercept-resend attack.
+
+### Title: Is Neuron Coverage Needed to Make Person Detection More Robust?
+* Paper ID: 2204.10027v1
+* Paper URL: [http://arxiv.org/abs/2204.10027v1](http://arxiv.org/abs/2204.10027v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: The growing use of deep neural networks (DNNs) in safety- and
+security-critical areas like autonomous driving raises the need for their
+systematic testing. Coverage-guided testing (CGT) is an approach that applies
+mutation or fuzzing according to a predefined coverage metric to find inputs
+that cause misbehavior. With the introduction of a neuron coverage metric, CGT
+has also recently been applied to DNNs. In this work, we apply CGT to the task
+of person detection in crowded scenes. The proposed pipeline uses YOLOv3 for
+person detection and includes finding DNN bugs via sampling and mutation, and
+subsequent DNN retraining on the updated training set. To be a bug, we require
+a mutated image to cause a significant performance drop compared to a clean
+input. In accordance with the CGT, we also consider an additional requirement
+of increased coverage in the bug definition. In order to explore several types
+of robustness, our approach includes natural image transformations,
+corruptions, and adversarial examples generated with the Daedalus attack. The
+proposed framework has uncovered several thousand cases of incorrect DNN
+behavior. The relative change in mAP performance of the retrained models
+reached on average between 26.21\% and 64.24\% for different robustness types.
+However, we have found no evidence that the investigated coverage metrics can
+be advantageously used to improve robustness.
+
+### Title: Hybrid Cloud-Edge Collaborative Data Anomaly Detection in Industrial Sensor Networks
+* Paper ID: 2204.09942v1
+* Paper URL: [http://arxiv.org/abs/2204.09942v1](http://arxiv.org/abs/2204.09942v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Industrial control systems (ICSs) are facing increasing cyber-physical
+attacks that can cause catastrophes in the physical system. Efficient anomaly
+detection models in the industrial sensor networks are essential for enhancing
+ICS reliability and security, due to the sensor data is related to the
+operational state of the ICS. Considering the limited availability of computing
+resources, this paper proposes a hybrid anomaly detection approach in
+cloud-edge collaboration industrial sensor networks. The hybrid approach
+consists of sensor data detection models deployed at the edges and a sensor
+data analysis model deployed in the cloud. The sensor data detection model
+based on Gaussian and Bayesian algorithms can detect the anomalous sensor data
+in real-time and upload them to the cloud for further analysis, filtering the
+normal sensor data and reducing traffic load. The sensor data analysis model
+based on Graph convolutional network, Residual algorithm and Long short-term
+memory network (GCRL) can effectively extract the spatial and temporal features
+and then identify the attack precisely. The proposed hybrid anomaly detection
+approach is evaluated using a benchmark dataset and baseline anomaly detection
+models. The experimental results show that the proposed approach can achieve an
+overall 11.19% increase in Recall and an impressive 14.29% improvement in
+F1-score, compared with the existing models.
+
+### Title: SPIKE: Secure and Private Investigation of the Kidney Exchange problem
+* Paper ID: 2204.09937v1
+* Paper URL: [http://arxiv.org/abs/2204.09937v1](http://arxiv.org/abs/2204.09937v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Background: The kidney exchange problem (KEP) addresses the matching of
+patients in need for a replacement organ with compatible living donors. Ideally
+many medical institutions should participate in a matching program to increase
+the chance for successful matches. However, to fulfill legal requirements
+current systems use complicated policy-based data protection mechanisms that
+effectively exclude smaller medical facilities to participate. Employing secure
+multi-party computation (MPC) techniques provides a technical way to satisfy
+data protection requirements for highly sensitive personal health information
+while simultaneously reducing the regulatory burdens.
+  Results: We have designed, implemented, and benchmarked SPIKE, a secure
+MPC-based privacy-preserving KEP which computes a solution by finding matching
+donor-recipient pairs in a graph structure. SPIKE matches 40 pairs in cycles of
+length 2 in less than 4 minutes and outperforms the previous state-of-the-art
+protocol by a factor of 400x in runtime while providing medically more robust
+solutions.
+  Conclusions: We show how to solve the KEP in a robust and privacy-preserving
+manner achieving practical performance. The usage of MPC techniques fulfills
+many data protection requirements on a technical level, allowing smaller health
+care providers to directly participate in a kidney exchange with reduced legal
+processes.
+
+### Title: Interstellar detection and chemical modeling of iso-propanol and its normal isomer
+* Paper ID: 2204.09912v1
+* Paper URL: [http://arxiv.org/abs/2204.09912v1](http://arxiv.org/abs/2204.09912v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: The detection of a branched alkyl molecule in the high-mass star forming
+protocluster Sgr B2(N) permitted by the advent of ALMA revealed a new dimension
+of interstellar chemistry. Astrochemical simulations subsequently predicted
+that beyond a certain degree of molecular complexity, branched molecules could
+even dominate over their straight-chain isomers. More generally, we aim at
+probing further the presence in the ISM of complex organic molecules with the
+capacity to exhibit both a normal and iso form, via the attachment of a
+functional group to either a primary or secondary carbon atom. We used the
+imaging spectral line survey survey ReMoCA performed with ALMA and the results
+of a recent spectroscopic study of propanol to search for the iso and normal
+isomers of this molecule in the hot molecular core Sgr B2(N2). We expanded the
+network of the astrochemical model MAGICKAL to explore the formation routes of
+propanol. We report the first interstellar detection of iso-propanol toward a
+position of Sgr B2(N2) that shows narrow linewidths. We also report the first
+secure detection of normal-propanol in a hot core. i-Propanol is found to be
+nearly as abundant as n-propanol, with an abundance ratio of 0.6 similar to the
+ratio of 0.4 that we obtained previously for i- and n-propyl cyanide in Sgr
+B2(N2). The results are in good agreement with the outcomes of our
+astrochemical models, which indicate that OH-radical addition to propylene in
+dust-grain ice mantles, driven by water photodissociation, can produce
+appropriate quantities of n- and i-propanol. The n-to-i ratio in Sgr B2(N2) may
+be a direct inheritance of the branching ratio of this reaction process. The
+detection of n- and i-propanol and their ratio indicate that the modest
+preference toward the normal form of propyl cyanide determined previously may
+be a more general feature among similarly sized interstellar molecules.
+[abridged]
+
+### Title: Joint Trajectory Design and User Scheduling of Aerial Cognitive Radio Networks
+* Paper ID: 2204.09901v1
+* Paper URL: [http://arxiv.org/abs/2204.09901v1](http://arxiv.org/abs/2204.09901v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Unmanned aerial vehicles (UAVs) have been widely employed to enhance the
+end-to-end performance of wireless communications since the links between UAVs
+and terrestrial nodes are line-of-sight (LoS) with high probability. However,
+the broadcast characteristics of signal propagation in LoS links make it
+vulnerable to being wiretapped by malicious eavesdroppers, which poses a
+considerable challenge to the security of wireless communications. This paper
+investigates the security of aerial cognitive radio networks (CRNs). An
+airborne base station transmits confidential messages to secondary users
+utilizing the same spectrum as the primary network. An aerial base station
+transmits jamming signals to suppress the eavesdropper to enhance secrecy
+performance. The uncertainty of eavesdropping node locations is considered, and
+the average secrecy rate of the cognitive user is maximized by optimizing
+multiple users' scheduling, the UAVs' trajectory, and transmit power. To solve
+the non-convex optimization problem with mixed multiple integers variable
+problem, we propose an iterative algorithm based on block coordinate descent
+and successive convex approximation. Numerical results verify the effectiveness
+of our proposed algorithm and demonstrate that our scheme is beneficial to
+improving the secrecy performance of aerial CRNs.
+
+### Title: Using SGX for Meta-Transactions Support in Ethereum DApps
+* Paper ID: 2204.09864v1
+* Paper URL: [http://arxiv.org/abs/2204.09864v1](http://arxiv.org/abs/2204.09864v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Decentralized applications (DApps) gained traction in the context of the
+blockchain technology. Ethereum is currently the public blockchain that backs
+the largest amount of the existing DApps. Onboarding new users to Ethereum
+DApps is a notoriously hard issue to solve. This is mainly caused by lack of
+cryptocurrency ownership, needed for transaction fees. Several meta-transaction
+patterns emerged for decoupling users from paying these fees. However, such
+solutions are mostly offered via off-chain, often paid relayer services and do
+not fully address the security issues present in the meta-transaction path. In
+this paper, we introduce a new meta-transaction architecture that makes use of
+the Intel Software Guard Extensions (SGX). Unlike other solutions, our approach
+would offer the possibility to deploy a fee-free Ethereum DApp on a web server
+that can directly relay meta-transactions to the Ethereum network while having
+essential security guarantees integrated by design.
+
+### Title: An Information-theoretical Secured Byzantine-fault Tolerance Consensus in Quantum Key Distribution Network
+* Paper ID: 2204.09832v1
+* Paper URL: [http://arxiv.org/abs/2204.09832v1](http://arxiv.org/abs/2204.09832v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Quantum key distribution (QKD) networks is expected to provide
+information-theoretical secured (ITS) communication over long distances. QKD
+networks based trusted relay architecture are now the most widely used scheme
+in practice. However, it is an unrealistic assumption that all relays are fully
+trustable in complex networks. In the past, only a few studies have
+theoretically analyzed the case of passive eavesdropping attack by dishonest
+relays and corresponding defense method. However, we have found that active
+attacks by dishonest relays can be more threatening. With the consideration of
+passive and active attacks, we treat dishonest relays as Byzantine nodes and
+analyzes the upper limit of Byzantine nodes that the QKD network can
+accommodate. In this paper, we propose an ITS Byzantine-fault tolerance (BFT)
+QKD network scheme to achieve end-to-end key distribution based on
+point-to-point QKD links. To ensure consistency and provide BFT ability in the
+QKD network, we design an ITSBFT-consensus protocol for this network scheme. To
+ensure the information-theoretic security of consensus, we design a temporary
+signature scheme based on point-to-point QKD link keys. To prevent Byzantine
+nodes from disrupting the execution process of key distribution, we design an
+end-to-end key distribution scheme combined with consensus. We theoretically
+analyze proposed ITSBFT-QKD network scheme from four aspects: QKD key
+distribution security, temporary signature security, consensus security, and
+leader election fairness. The simulation result proved the feasibility and
+demonstrate the performance.
+
+### Title: Block Hunter: Federated Learning for Cyber Threat Hunting in Blockchain-based IIoT Networks
+* Paper ID: 2204.09829v1
+* Paper URL: [http://arxiv.org/abs/2204.09829v1](http://arxiv.org/abs/2204.09829v1)
+* Updated Date: 2022-04-21
+* Code URL: null
+* Summary: Nowadays, blockchain-based technologies are being developed in various
+industries to improve data security. In the context of the Industrial Internet
+of Things (IIoT), a chain-based network is one of the most notable applications
+of blockchain technology. IIoT devices have become increasingly prevalent in
+our digital world, especially in support of developing smart factories.
+Although blockchain is a powerful tool, it is vulnerable to cyber attacks.
+Detecting anomalies in blockchain-based IIoT networks in smart factories is
+crucial in protecting networks and systems from unexpected attacks. In this
+paper, we use Federated Learning (FL) to build a threat hunting framework
+called Block Hunter to automatically hunt for attacks in blockchain-based IIoT
+networks. Block Hunter utilizes a cluster-based architecture for anomaly
+detection combined with several machine learning models in a federated
+environment. To the best of our knowledge, Block Hunter is the first federated
+threat hunting model in IIoT networks that identifies anomalous behavior while
+preserving privacy. Our results prove the efficiency of the Block Hunter in
+detecting anomalous activities with high accuracy and minimum required
+bandwidth.
+
+### Title: A Revealing Large-Scale Evaluation of Unsupervised Anomaly Detection Algorithms
+* Paper ID: 2204.09825v1
+* Paper URL: [http://arxiv.org/abs/2204.09825v1](http://arxiv.org/abs/2204.09825v1)
+* Updated Date: 2022-04-21
+* Code URL: [https://github.com/ireydiak/anomaly_detection_nrcan](https://github.com/ireydiak/anomaly_detection_nrcan)
+* Summary: Anomaly detection has many applications ranging from bank-fraud detection and
+cyber-threat detection to equipment maintenance and health monitoring. However,
+choosing a suitable algorithm for a given application remains a challenging
+design decision, often informed by the literature on anomaly detection
+algorithms. We extensively reviewed twelve of the most popular unsupervised
+anomaly detection methods. We observed that, so far, they have been compared
+using inconsistent protocols - the choice of the class of interest or the
+positive class, the split of training and test data, and the choice of
+hyperparameters - leading to ambiguous evaluations. This observation led us to
+define a coherent evaluation protocol which we then used to produce an updated
+and more precise picture of the relative performance of the twelve methods on
+five widely used tabular datasets. While our evaluation cannot pinpoint a
+method that outperforms all the others on all datasets, it identifies those
+that stand out and revise misconceived knowledge about their relative
+performances.
+
